098_bst_map/grade.txt
Grading at 11/15/2022:03:01:10.464171
For commit ID 4205f25619da67bee4d37ca5dd2bc234dcbb32fd
Grading at Mon Nov 14 10:01:08 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = int; V = int]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = int; V = Tester]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = Tester; V = int]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::deleteNode(BstMap<K, V>::Node*, K) [with K = Tester; V = Tester]’:
bstmap.h:117:3: error: control reaches end of non-void function [-Werror=return-type]
  117 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
